--- a/birthday-master/css/style.css
+++ b/birthday-master/css/style.css
@@ -7,6 +7,7 @@ body{margin:0;padding:0;background:#FFB6C1;font-size:12px;overflow:auto}#mainDiv
 	text-shadow: 0 1px 0 #fff, 0 -1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff;
 	font-size:30px}
 #copyright{margin-top:10px;text-align:center;width:100%;color:#F180C5}#errorMsg{width:100%;text-align:center;font-size:24px;position:absolute;top:100px;left:0}#copyright a{color:#F180C5}
-.bb{display:block;text-align:center;padding-lef:100px;font-size:30px;color:#F180C5}
+.bb{display:block;text-align:center;padding-lef:100px;font-size:30px;color: #FF69B4
+}
 #yyxz{position: fixed;bottom: 6.8em;left:8%;z-index:9999;}
 body{background: url(../images/houtaibizhi.jpg);}
